cmake_minimum_required(VERSION 3.4)
# by genBTC 2017, project setup on CMake on Windows 64 using MSYS2/MingW64/G++ compilers. Change stuff as needed.
project(FSNav)
set( PACKAGE_NAME "FSNav" )
set( PACKAGE_STRING "FSNav 17.12.10" )
set( PACKAGE_TARNAME "FSNav" )
set( PACKAGE_VERSION "17.12.10")
set(CMAKE_CXX_STANDARD "17")
#Little routine to detect Current CPUs.
include(ProcessorCount)
ProcessorCount(NumCPUS)
message("detected number of CPU threads: " ${NumCPUS})
set(MAKEFLAGS "-j${NumCPUS}")
#// Linked Library Setup:
include(GNUInstallDirs)
# need GLUT (Freeglut)
find_package(GLUT REQUIRED)
# need OpenGL (auto)
find_package(OpenGL REQUIRED)
find_package(Freetype REQUIRED)
#needed to find ft2build.h in the freetype subdirectory
include_directories(${FREETYPE_INCLUDE_DIRS})
find_package(PNG REQUIRED)
find_package(JPEG REQUIRED)
#Set Link libraries (Auto)
set(LIBRARIES_FROM_REFERENCES "${GLUT_LIBRARIES};${OPENGL_gl_LIBRARY};${OPENGL_glu_LIBRARY};${FREETYPE_LIBRARIES};${JPEG_LIBRARIES};${PNG_LIBRARIES};${ZLIB_LIBRARIES}")
#Set Link Libraries (Manually)
#set(LIBRARIES_FROM_REFERENCES "-lfreeglut;-lopengl32;-lglu32;-lfreetype;-lz;-ljpeg;-lpng;")
#Add the two Subdirectories with CMakeLists.txt recursively: built as static Libs with Cmake:
add_subdirectory(VMath)
add_subdirectory(Imago)
#Prepare EXE - by listing all source files, and the Resource.rc (icon)
set(SOURCE_FILES "fsnav.cc;fstree.cc;colorman.cc;vis.cc;stereo.c;text.c")
if(WIN32)
	add_executable(FSNav WIN32 ${SOURCE_FILES})
else()
	add_executable(FSNav ${SOURCE_FILES})
endif(WIN32)
#Make Exe, go!
target_link_libraries(FSNav VMath Imago ${LIBRARIES_FROM_REFERENCES})
#Need to Copy the Data folder to the output dir.