cmake_minimum_required(VERSION 3.4)
set( PACKAGE_NAME "Imago" )
set( PACKAGE_STRING "Imago 1.0" )
set( PACKAGE_TARNAME "Imago" )
set( PACKAGE_VERSION "1.0" )
include_directories(${CMAKE_SOURCE_DIR})
add_library(Imago STATIC image_jpg.c image_png.c image_ppm.c image_rgbe.c image_tga.c byteorder.c util.c image.c)